m03a06quadratic-handout/grading/2024-09-19-08-29-36/compile.err
Quadratic.java:17: error: cannot find symbol
        if (d >= 1) {System.out.println(solve + " " + solve1);}
                                        ^
  symbol:   variable solve
  location: class Quadratic
Quadratic.java:17: error: cannot find symbol
        if (d >= 1) {System.out.println(solve + " " + solve1);}
                                                      ^
  symbol:   variable solve1
  location: class Quadratic
Quadratic.java:18: error: cannot find symbol
        else if (d == 0) {System.out.println(solve + " " + solve1);}
                                             ^
  symbol:   variable solve
  location: class Quadratic
Quadratic.java:18: error: cannot find symbol
        else if (d == 0) {System.out.println(solve + " " + solve1);}
                                                           ^
  symbol:   variable solve1
  location: class Quadratic
4 errors
